Fix test compilation